added dropdown menu left in catalog.html

--- a/catalog.html
+++ b/catalog.html
@@ -26,7 +26,7 @@
             <div class="burgerGroup">
                 <a href="#"><img src="img/burger.svg" alt="menu"></a>
                 <a href="#"><img src="img/Forma 1-1.svg" alt="login"></a>
-                <a href="#"><img src="img/Forma 1-2.svg" alt="basket"></a>
+                <a href="#"><img src="img/Forma 1-2.svg" alt="basket2"></a>
             </div>
         </div>
     </header>
@@ -47,28 +47,53 @@
     <section class="container">
         <div class="filterBox">
             <div class="filter">
-                <details>
+                <details class="filter_details">
                     <summary>
                         <p class="filter_text">FILTER</p>
 
                         <img class="filter__img" src="img/filter.svg" alt="filterImg">
                         <img class="filter__img filter_imgRed" src="img/filterRed.png" alt="filterImgRed">
                     </summary>
-                    <div class="detailsDox">
+                    <div class="detailsBox">
                         <details class="dropDetails">
                             <summary class="summaryHeader">CATEGORY
 
                             </summary>
+                            <ul class="detailsItems">
+                                <li><a class="detailsItems_li" href=#>Accessories</a></li>
+                                <li><a class="detailsItems_li"href=#>Bags</a></li>
+                                <li><a class="detailsItems_li"href=#>Denim</a></li>
+                                <li><a class="detailsItems_li"href=#>Hoodies</a></li>
+                                <li><a class="detailsItems_li"href=#>Jackets&Coats</a></li>
+                                <li><a class="detailsItems_li"href=#>Shoes</a></li>
+                                <li><a class="detailsItems_li"href=#>Sweaters&Knits</a></li>
+                            </ul>
                         </details>
                         <details class="dropDetails">
                             <summary class="summaryHeader">BRAND
-
                             </summary>
+                            <ul class="detailsItems">
+                                <li><a class="detailsItems_li" href=#>Accessories</a></li>
+                                <li><a class="detailsItems_li"href=#>Bags</a></li>
+                                <li><a class="detailsItems_li"href=#>Denim</a></li>
+                                <li><a class="detailsItems_li"href=#>Hoodies</a></li>
+                                <li><a class="detailsItems_li"href=#>Jackets&Coats</a></li>
+                                <li><a class="detailsItems_li"href=#>Shoes</a></li>
+                                <li><a class="detailsItems_li"href=#>Sweaters&Knit</a></li>
+                            </ul>
                         </details>
                         <details class="dropDetails">
                             <summary class="summaryHeader">DESIGNER
-
                             </summary>
+                            <ul class="detailsItems">
+                                <li><a class="detailsItems_li" href=#>Accessories</a></li>
+                                <li><a class="detailsItems_li"href=#>Bags</a></li>
+                                <li><a class="detailsItems_li"href=#>Denim</a></li>
+                                <li><a class="detailsItems_li"href=#>Hoodies</a></li>
+                                <li><a class="detailsItems_li"href=#>Jackets&Coats</a></li>
+                                <li><a class="detailsItems_li"href=#>Shoes</a></li>
+                                <li><a class="detailsItems_li"href=#>Sweaters&Knit</a></li>
+                            </ul>
                         </details>
                     </div>
                 </details>
