--- a/catalog.html
+++ b/catalog.html
@@ -311,10 +311,15 @@
                     </div>
             </div>
         </div>
-        <a href="#" class="browseLink">
-            <button class="browseButton">Browse All Products</button>
-        </a>
-        <i class="fab fa-instagram-square"></i>
+        <div class="pagination">
+            <a href="#" class="pageItem">'<'</a>
+            <a href="#" class="pageItem">1</a>
+            <a href="#" class="pageItem">2</a>
+            <a href="#" class="pageItem">3</a>
+            <a href="#" class="pageItem">4</a>
+            <a href="#" class="pageItem">5</a>
+            <a href="#" class="pageItem">'>'</a>
+        </div>
     </section>
     <footer>
         <div class="upper">
