--- a/catalog.html
+++ b/catalog.html
@@ -30,7 +30,7 @@
             </div>
         </div>
     </header>
-    <div class="breadcrumb">
+    <div class="breadcrumb1">
         <div class="newArrivals">
             <a href="#" class="newArrivalsLink">NEW ARRIVALS</a>
         </div>
@@ -61,12 +61,12 @@
                             </summary>
                             <ul class="detailsItems">
                                 <li><a class="detailsItems_li" href=#>Accessories</a></li>
-                                <li><a class="detailsItems_li"href=#>Bags</a></li>
-                                <li><a class="detailsItems_li"href=#>Denim</a></li>
-                                <li><a class="detailsItems_li"href=#>Hoodies</a></li>
-                                <li><a class="detailsItems_li"href=#>Jackets&Coats</a></li>
-                                <li><a class="detailsItems_li"href=#>Shoes</a></li>
-                                <li><a class="detailsItems_li"href=#>Sweaters&Knits</a></li>
+                                <li><a class="detailsItems_li" href=#>Bags</a></li>
+                                <li><a class="detailsItems_li" href=#>Denim</a></li>
+                                <li><a class="detailsItems_li" href=#>Hoodies</a></li>
+                                <li><a class="detailsItems_li" href=#>Jackets&Coats</a></li>
+                                <li><a class="detailsItems_li" href=#>Shoes</a></li>
+                                <li><a class="detailsItems_li" href=#>Sweaters&Knits</a></li>
                             </ul>
                         </details>
                         <details class="dropDetails">
@@ -74,12 +74,12 @@
                             </summary>
                             <ul class="detailsItems">
                                 <li><a class="detailsItems_li" href=#>Accessories</a></li>
-                                <li><a class="detailsItems_li"href=#>Bags</a></li>
-                                <li><a class="detailsItems_li"href=#>Denim</a></li>
-                                <li><a class="detailsItems_li"href=#>Hoodies</a></li>
-                                <li><a class="detailsItems_li"href=#>Jackets&Coats</a></li>
-                                <li><a class="detailsItems_li"href=#>Shoes</a></li>
-                                <li><a class="detailsItems_li"href=#>Sweaters&Knit</a></li>
+                                <li><a class="detailsItems_li" href=#>Bags</a></li>
+                                <li><a class="detailsItems_li" href=#>Denim</a></li>
+                                <li><a class="detailsItems_li" href=#>Hoodies</a></li>
+                                <li><a class="detailsItems_li" href=#>Jackets&Coats</a></li>
+                                <li><a class="detailsItems_li" href=#>Shoes</a></li>
+                                <li><a class="detailsItems_li" href=#>Sweaters&Knit</a></li>
                             </ul>
                         </details>
                         <details class="dropDetails">
@@ -87,12 +87,12 @@
                             </summary>
                             <ul class="detailsItems">
                                 <li><a class="detailsItems_li" href=#>Accessories</a></li>
-                                <li><a class="detailsItems_li"href=#>Bags</a></li>
-                                <li><a class="detailsItems_li"href=#>Denim</a></li>
-                                <li><a class="detailsItems_li"href=#>Hoodies</a></li>
-                                <li><a class="detailsItems_li"href=#>Jackets&Coats</a></li>
-                                <li><a class="detailsItems_li"href=#>Shoes</a></li>
-                                <li><a class="detailsItems_li"href=#>Sweaters&Knit</a></li>
+                                <li><a class="detailsItems_li" href=#>Bags</a></li>
+                                <li><a class="detailsItems_li" href=#>Denim</a></li>
+                                <li><a class="detailsItems_li" href=#>Hoodies</a></li>
+                                <li><a class="detailsItems_li" href=#>Jackets&Coats</a></li>
+                                <li><a class="detailsItems_li" href=#>Shoes</a></li>
+                                <li><a class="detailsItems_li" href=#>Sweaters&Knit</a></li>
                             </ul>
                         </details>
                     </div>
@@ -135,9 +135,10 @@
                                     </a>
 
                                     <ul class="dropdown-menu" aria-labelledby="navbarDarkDropdownMenuLink">
-                                        <li><a class="dropdown-item" href="#">Action</a></li>
-                                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                        <li><a class="dropdown-item" href="#">XS</a></li>
+                                        <li><a class="dropdown-item" href="#">S</a></li>
+                                        <li><a class="dropdown-item" href="#">M</a></li>
+                                        <li><a class="dropdown-item" href="#">l</a></li>
                                     </ul>
                                 </li>
                                 <li class="nav-item dropdown">
@@ -311,14 +312,21 @@
                     </div>
             </div>
         </div>
-        <div class="pagination">
-            <a href="#" class="pageItem">'<'</a>
-            <a href="#" class="pageItem">1</a>
-            <a href="#" class="pageItem">2</a>
-            <a href="#" class="pageItem">3</a>
-            <a href="#" class="pageItem">4</a>
-            <a href="#" class="pageItem">5</a>
-            <a href="#" class="pageItem">'>'</a>
+        <div class="center">
+            <div class="pagination">
+                <a href="#" class="pageItem">
+                    <i class="fas fa-chevron-left"></i>
+                </a>
+                <a href="#" class="pageItem">1</a>
+                <a href="#" class="pageItem">2</a>
+                <a href="#" class="pageItem">3</a>
+                <a href="#" class="pageItem">4</a>
+                <a href="#" class="pageItem">5</a>
+                <a href="#" class="pageItem">
+                    <i class="fas fa-chevron-right">
+                    </i>
+                </a>
+            </div>
         </div>
     </section>
     <footer>
