cart page is responsive now

--- a/cart.html
+++ b/cart.html
@@ -25,8 +25,8 @@
             </div>
             <div class="burgerGroup">
                 <a href="#"><img src="img/burger.svg" alt="menu"></a>
-                <a href="#"><img src="img/Forma 1-1.svg" alt="login"></a>
-                <a href="#"><img src="img/Forma 1-2.svg" alt="basket2"></a>
+                <a class="login_img" href="#"><img src="img/Forma 1-1.svg" alt="login"></a>
+                <a class="cart_img" href="#"><img src="img/Forma 1-2.svg" alt="basket2"></a>
             </div>
         </div>
     </header>
