registration form is ready

--- a/registration.html
+++ b/registration.html
@@ -42,28 +42,29 @@
                 <form action="#" class="shippingForm">
 
                     <fieldset>
-                        <legend>SHIPPING ADDRESS</legend>
-
-                        <input class="inputShip" id="country" placeholder="Country" autofocus> <br>
-                        <input class="inputShip" id="state" placeholder="State"> <br>
-                        <input class="inputShip" id="zip" placeholder="Postcode/Zip"><br>
-                        <button class="clear-continue-button">GET QUOTE</button>
+                        <legend>Your Name</legend>
+                        <input class="inputShip" id="firstName" placeholder="First Name" autofocus> <br>
+                        <input class="inputShip" id="lastName" placeholder="Last Name"> <br>
+                        <input class="sex" type="radio" name="sex" checked value="male"><span class="male">Male</span>
+                        <input class="sex" type="radio" name="sex" value="female"><span class="female">Female</span>
+                        <legend>Login details</legend>
+                        <input class="inputShip" id="email" placeholder="Email" autofocus> <br>
+                        <input class="inputShip" id="password" placeholder="Password"> <br>
+                        <p class="regText">Please use 8 or more characters, with at least 1 number and a mixture of
+                            uppercase and lowercase letters</p>
                     </fieldset>
                 </form>
             </div>
             <div class="checkOutBox">
-
                 <button class="clear-continue-button checkout-button">JOIN NOW
                     <i class="fas fa-arrow-right"></i>
                 </button>
-
             </div>
         </div>
-        <div class="loyality">
+        <article class="loyality">
             <h3 class="loyality_header">LOYALTY HAS ITS PERKS</h3>
             <div class="loyality_text">Get in on the loyalty program where you can earn points and unlock serious
-                perks.
-                Starting with these as soon as you join:</div>
+                perks. Starting with these as soon as you join:</div>
             <ul class="loyality_list">
                 <li class="loyality_list_item">15% off welcome offer
                 </li>
@@ -76,8 +77,7 @@
                 <li class="loyality_list_item">Early access to products</li>
                 <li class="loyality_list_item">Exclusive offers & rewards</li>
             </ul>
-        </div>
-        </div>
+        </article>
     </section>
     <footer>
         <div class="middle">
