добавлено выпадающее меню в header

--- a/cart.html
+++ b/cart.html
@@ -24,9 +24,67 @@
                 <form action="###"><img src="img/Forma 1.svg" alt="search"></form>
             </div>
             <div class="burgerGroup">
-                <a href="#"><img src="img/burger.svg" alt="menu"></a>
-                <a class="login_img" href="#"><img src="img/Forma 1-1.svg" alt="login"></a>
-                <a class="cart_img" href="#"><img src="img/Forma 1-2.svg" alt="basket2"></a>
+                <input class="open" type="checkbox" id="switcher">
+                <label for="switcher"><i class="fas fa-bars burger_group_item"></i></label>
+                <nav class="rightMenu">
+                    <h3>MENU</h3>
+                    <ul class="rightMenu_divs">
+                        <ul class="rightMenu_subdivs">
+                            <h4 class="rightMenu_items_header">WOMEN</h4>
+                            <a href="catalog.html">
+                                <li class="rightMenu_items">Accessories</li>
+                            </a>
+                            <a href="catalog.html">
+                                <li class="rightMenu_items">Bags</li>
+                            </a>
+                            <a href="catalog.html">
+                                <li class="rightMenu_items">Denim</li>
+                            </a>
+                            <a href="catalog.html">
+                                <li class="rightMenu_items">
+                                    Sweaters
+                                </li>
+                            </a>
+                        </ul>
+                        <ul class="rightMenu_subdivs">
+                            <h4 class="rightMenu_items_header">MEN</h4>
+                            <a href="catalog.html">
+                                <li class="rightMenu_items">Accessories</li>
+                            </a>
+                            <a href="catalog.html">
+                                <li class="rightMenu_items">Bags</li>
+                            </a>
+                            <a href="catalog.html">
+                                <li class="rightMenu_items">Denim</li>
+                            </a>
+                            <a href="catalog.html">
+                                <li class="rightMenu_items">
+                                    Sweaters
+                                </li>
+                            </a>
+                        </ul>
+                        <ul class="rightMenu_subdivs">
+                            <h4 class="rightMenu_items_header">KIDS</h4>
+                            <a href="catalog.html">
+                                <li class="rightMenu_items">Accessories</li>
+                            </a>
+                            <a href="catalog.html">
+                                <li class="rightMenu_items">Bags</li>
+                            </a>
+                            <a href="catalog.html">
+                                <li class="rightMenu_items">Denim</li>
+                            </a>
+                            <a href="catalog.html">
+                                <li class="rightMenu_items">
+                                    Sweaters
+                                </li>
+                            </a>
+                        </ul>
+                    </ul>
+                    <label for="switcher" class="close"><i class="fas fa-times"></i></label>
+                </nav>
+                <a href="registration.html"><i class="far fa-user burger_group_item"></i></a>
+                <a href="cart.html"><i class="fas fa-shopping-cart burger_group_item"></i></a>
             </div>
         </div>
     </header>
