--- a/index.html
+++ b/index.html
@@ -21,56 +21,115 @@
                 <form action="###"><img src="img/Forma 1.svg" alt="search"></form>
             </div>
             <div class="burgerGroup">
-                <a href="#"><img src="img/burger.svg" alt="menu"></a>
-                <a href="#"><img src="img/Forma 1-1.svg" alt="login"></a>
-                <a href="#"><img src="img/Forma 1-2.svg" alt="basket"></a>
+                <input class="open" type="checkbox" id="switcher">
+                <label for="switcher"><i class="fas fa-bars burger_group_item"></i></label>
+                <nav class="rightMenu">
+                    <h3>MENU</h3>
+                    <ul class="rightMenu_divs">
+                        <ul class="rightMenu_subdivs">
+                            <h4 class="rightMenu_items_header">WOMEN</h4>
+                            <a href="catalog.html">
+                                <li class="rightMenu_items">Accessories</li>
+                            </a>
+                            <a href="catalog.html">
+                                <li class="rightMenu_items">Bags</li>
+                            </a>
+                            <a href="catalog.html">
+                                <li class="rightMenu_items">Denim</li>
+                            </a>
+                            <a href="catalog.html">
+                                <li class="rightMenu_items">
+                                    Sweaters
+                                </li>
+                            </a>
+                        </ul>
+                        <ul class="rightMenu_subdivs">
+                            <h4 class="rightMenu_items_header">MEN</h4>
+                            <a href="catalog.html">
+                                <li class="rightMenu_items">Accessories</li>
+                            </a>
+                            <a href="catalog.html">
+                                <li class="rightMenu_items">Bags</li>
+                            </a>
+                            <a href="catalog.html">
+                                <li class="rightMenu_items">Denim</li>
+                            </a>
+                            <a href="catalog.html">
+                                <li class="rightMenu_items">
+                                    Sweaters
+                                </li>
+                            </a>
+                        </ul>
+                        <ul class="rightMenu_subdivs">
+                            <h4 class="rightMenu_items_header">KIDS</h4>
+                            <a href="catalog.html">
+                                <li class="rightMenu_items">Accessories</li>
+                            </a>
+                            <a href="catalog.html">
+                                <li class="rightMenu_items">Bags</li>
+                            </a>
+                            <a href="catalog.html">
+                                <li class="rightMenu_items">Denim</li>
+                            </a>
+                            <a href="catalog.html">
+                                <li class="rightMenu_items">
+                                    Sweaters
+                                </li>
+                            </a>
+                        </ul>
+                    </ul>
+                    <label for="switcher" class="close"><i class="fas fa-times"></i></label>
+                </nav>
+                <a href="registration.html"><i class="far fa-user burger_group_item"></i></a>
+                <a href="cart.html"><i class="fas fa-shopping-cart burger_group_item"></i></a>
             </div>
         </div>
     </header>
     <div class="main">
-        <div class="mainPhoto"></div>
-        <div class="mainSlogan">
-            <p class="main_slogan_text">
-                <span class="upper_slogan_text">
-                    THE BRAND
-                </span>
-                </br>
-                OF LUXURIOUS <span class="end_slogan_text"> FASHION</span>
-            </p>
-        </div>
-    </div>
-    <div class="offer container">
-        <div class="clothes">
-            <div class="women">
-
-                <a href="#" class="offersFor">
-                    <p class="offers">30% OFF</p>
-                    <p class="offers for">FOR WOMEN</p>
-                </a>
-
+        <div class="bannerBox myContainer">
+            <div class="mainPhoto"></div>
+            <div class="mainSlogan">
+                <p class="main_slogan_text">
+                    <span class="upper_slogan_text">
+                        THE BRAND
+                    </span>
+                    </br>
+                    OF LUXURIOUS <span class="end_slogan_text"> FASHION</span>
+                </p>
             </div>
-            <div class="men"><a href="#" class="offersFor">
-                    <p class="offers">HOT DEAL</p>
-                    <p class="offers for">FOR MEN</p>
-                </a></div>
-            <div class="kids"><a href="#" class="offersFor">
-                    <p class="offers">NEW ARRIVALS</p>
-                    <p class="offers for">FOR KIDS</p>
-                </a></div>
         </div>
-        <div class="accessoires"><a href="#" class="offersFor">
-                <p class="offers">LUXUROUS&TRENDY</p>
-                <p class="offers for">ACCESSOIRES</p>
-            </a></div>
-
-
     </div>
+    <section>
+        <div class="container offers">
+            <div class="offers__block offers__women">
+                <a href="catalog.html" class="offers__block-link">
+                    30% off <span class="font__link">for women</span>
+                </a>
+            </div>
+            <div class="offers__block offers__women">
+                <a href="catalog.html" class="offers__block-link">
+                    30% off <span class="font__link">for women</span>
+                </a>
+            </div>
+            <div class="offers__block offers__women">
+                <a href="catalog.html" class="offers__block-link">
+                    30% off <span class="font__link">for women</span>
+                </a>
+            </div>
+            <div class="offers__block offers__accessories">
+                <a class="offers__block-link-acces" href="#">luxerious &amp; trendy <span
+                        class="font__link">accessories</span></a>
+            </div>
+        </div>
+    </section>
     <section class="container">
         <h2 class="featuredItems_heading">Featured Items</h2>
         <p class="featuredItems_text">Shop for items based on what we featured in this week</p>
         <div class="items_box">
-            <div class="item_card">
-                <a href="#" class="item-link">
+
+            <a href="product.html" class="item-link">
+                <div class="item_card">
+
                     <img class="item_img" src="img/Rectangle 15 copy.png" alt="good">
                     <div class="txt-box">
                         <h3 class="card_heading">ELLERY X M'O CAPSULE</h3>
@@ -79,14 +138,16 @@
                         <div class="card_price">$45.99</div>
                     </div>
                     <div class="add-box">
-                        <a href="#" class="add">
+                        <a href="cart.html" class="add">
                             <img class="add-img" src="img/Forma 1-2.svg" alt="cart">
                             <p class="add-txt">Add to Cart</p>
                         </a>
                     </div>
-            </div>
-            <div class="item_card">
-                <a href="#" class="item-link">
+                </div>
+            </a>
+            <a href="product.html" class="item-link">
+                <div class="item_card">
+
                     <img class="item_img" src="img/Rectangle 15 copy-2.png" alt="good">
                     <div class="txt-box">
                         <h3 class="card_heading">ELLERY X M'O CAPSULE</h3>
@@ -95,14 +156,16 @@
                         <div class="card_price">$45.99</div>
                     </div>
                     <div class="add-box">
-                        <a href="#" class="add">
+                        <a href="cart.html" class="add">
                             <img class="add-img" src="img/Forma 1-2.svg" alt="cart">
                             <p class="add-txt">Add to Cart</p>
                         </a>
                     </div>
-            </div>
-            <div class="item_card">
-                <a href="#" class="item-link">
+                </div>
+            </a>
+            <a href="product.html" class="item-link">
+                <div class="item_card">
+
                     <img class="item_img" src="img/Rectangle 15 copy-3.png" alt="good">
                     <div class="txt-box">
                         <h3 class="card_heading">ELLERY X M'O CAPSULE</h3>
@@ -111,14 +174,16 @@
                         <div class="card_price">$45.99</div>
                     </div>
                     <div class="add-box">
-                        <a href="#" class="add">
+                        <a href="cart.html" class="add">
                             <img class="add-img" src="img/Forma 1-2.svg" alt="cart">
                             <p class="add-txt">Add to Cart</p>
                         </a>
                     </div>
-            </div>
-            <div class="item_card">
-                <a href="#" class="item-link">
+                </div>
+            </a>
+            <a href="product.html" class="item-link">
+                <div class="item_card">
+
                     <img class="item_img" src="img/Rectangle 15 copy-4.png" alt="good">
                     <div class="txt-box">
                         <h3 class="card_heading">ELLERY X M'O CAPSULE</h3>
@@ -127,14 +192,16 @@
                         <div class="card_price">$45.99</div>
                     </div>
                     <div class="add-box">
-                        <a href="#" class="add">
+                        <a href="cart.html" class="add">
                             <img class="add-img" src="img/Forma 1-2.svg" alt="cart">
                             <p class="add-txt">Add to Cart</p>
                         </a>
                     </div>
-            </div>
-            <div class="item_card">
-                <a href="#" class="item-link">
+                </div>
+            </a>
+            <a href="product.html" class="item-link">
+                <div class="item_card">
+
                     <img class="item_img" src="img/Rectangle 15 copy-3.png" alt="good">
                     <div class="txt-box">
                         <h3 class="card_heading">ELLERY X M'O CAPSULE</h3>
@@ -143,14 +210,16 @@
                         <div class="card_price">$45.99</div>
                     </div>
                     <div class="add-box">
-                        <a href="#" class="add">
+                        <a href="cart.html" class="add">
                             <img class="add-img" src="img/Forma 1-2.svg" alt="cart">
                             <p class="add-txt">Add to Cart</p>
                         </a>
                     </div>
-            </div>
-            <div class="item_card">
-                <a href="#" class="item-link">
+                </div>
+            </a>
+            <a href="product.html" class="item-link">
+                <div class="item_card">
+
                     <img class="item_img" src="img/Image.png" alt="good">
                     <div class="txt-box">
                         <h3 class="card_heading">ELLERY X M'O CAPSULE</h3>
@@ -158,50 +227,52 @@
                             arbiter of cool Kym Ellery teams up with Moda Operandi</div>
                         <div class="card_price">$45.99</div>
                     </div>
+
                     <div class="add-box">
-                        <a href="#" class="add">
+                        <a href="cart.html" class="add">
                             <img class="add-img" src="img/Forma 1-2.svg" alt="cart">
                             <p class="add-txt">Add to Cart</p>
                         </a>
                     </div>
-            </div>
+
+                </div>
+            </a>
         </div>
-        <a href="#" class="browseLink">
+        <a href="catalog.html" class="browseLink">
             <button class="browseButton">Browse All Products</button>
         </a>
-        <i class="fab fa-instagram-square"></i>
     </section>
-    <footer>
-        <div class="upper">
-            <div class="footer container">
-                <div class="footHeader delivery">
-                    <img src="img/Forma 1.png" height="40px" alt="delivery">
-                    <h4 class="footerHead">Free Delivery</h4>
-                    <p class="footerHead footHeadText">Worldwide delivery on all. Authorit tively morph next-generation
-                        innov tion
-                        with
-                        extensive models.</p>
-                </div>
-                <div class="footHeader discount">
-                    <img src="img/Forma 1-1.png" alt="discount">
-                    <h4 class="footerHead">Sales & discounts</h4>
-                    <p class="footerHead footHeadText">Worldwide delivery on all. Authorit tively morph next-generation
-                        innov tion
-                        with
-                        extensive models.</p>
-                </div>
-                <div class="footHeader assurance">
-                    <img src="img/Forma 1-2.png" height="40px" alt="assurance">
-                    <h4 class="footerHead">Quality assurance</h4>
-                    <p class="footerHead footHeadText">Worldwide delivery on all. Authorit tively morph next-generation
-                        innov tion
-                        with
-                        extensive models.</p>
-                </div>
+    <div class="upper">
+        <div class="footer container">
+            <div class="footHeader delivery">
+                <img src="img/Forma 1.png" height="40px" alt="delivery">
+                <h4 class="footerHead">Free Delivery</h4>
+                <p class="footerHead footHeadText">Worldwide delivery on all. Authorit tively morph next-generation
+                    innov tion
+                    with
+                    extensive models.</p>
             </div>
-
-
+            <div class="footHeader discount">
+                <img src="img/Forma 1-1.png" alt="discount">
+                <h4 class="footerHead">Sales & discounts</h4>
+                <p class="footerHead footHeadText">Worldwide delivery on all. Authorit tively morph next-generation
+                    innov tion
+                    with
+                    extensive models.</p>
+            </div>
+            <div class="footHeader assurance">
+                <img src="img/Forma 1-2.png" height="40px" alt="assurance">
+                <h4 class="footerHead">Quality assurance</h4>
+                <p class="footerHead footHeadText">Worldwide delivery on all. Authorit tively morph next-generation
+                    innov tion
+                    with
+                    extensive models.</p>
+            </div>
         </div>
+
+
+    </div>
+    <footer>
         <div class="middle">
             <div class="middle_bg"></div>
             <div class="feedback">
